# lvgl_v9_simulator

./: CMakeLists.txt  README.md  main.cpp
lv_sdl_porting/: CMakeLists.txt  lv_porting.hpp  lv_sdl_conf.h
lvgl/: lv_conf.h
